--- a/Savio/SavingPlanSetup/GroupsavingViewController.xib
+++ b/Savio/SavingPlanSetup/GroupsavingViewController.xib
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GroupsavingViewController" customModule="Savio" customModuleProvider="target">
             <connections>
                 <outlet property="cameraButton" destination="JzU-xa-etS" id="nDj-Yn-dUx"/>
+                <outlet property="contentView" destination="utt-4l-toQ" id="vqn-2n-Nvd"/>
                 <outlet property="savingPlanTitleLabel" destination="eqD-re-6hS" id="zyA-9h-ePX"/>
                 <outlet property="scrlView" destination="bZg-DJ-1R2" id="WAr-qu-Gvf"/>
                 <outlet property="tblView" destination="umo-dj-Tjc" id="adQ-td-as7"/>
@@ -30,9 +31,9 @@
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="utt-4l-toQ">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                             <subviews>
-                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="umo-dj-Tjc">
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="umo-dj-Tjc">
                                     <rect key="frame" x="35" y="200" width="530" height="500"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
@@ -103,12 +104,18 @@
                                 <constraint firstItem="6Ub-W7-mUI" firstAttribute="top" secondItem="utt-4l-toQ" secondAttribute="top" id="3mb-GC-qMS"/>
                                 <constraint firstItem="umo-dj-Tjc" firstAttribute="top" secondItem="6Ub-W7-mUI" secondAttribute="bottom" constant="8" id="3sY-ph-Ofy"/>
                                 <constraint firstAttribute="height" constant="600" id="DOw-VY-uDv"/>
+                                <constraint firstAttribute="height" constant="1000" id="OQ5-pq-RXn"/>
                                 <constraint firstItem="6Ub-W7-mUI" firstAttribute="leading" secondItem="utt-4l-toQ" secondAttribute="leading" id="Pek-O7-44c"/>
                                 <constraint firstAttribute="trailing" secondItem="umo-dj-Tjc" secondAttribute="trailing" constant="35" id="Wnw-xG-m43"/>
                                 <constraint firstItem="umo-dj-Tjc" firstAttribute="leading" secondItem="utt-4l-toQ" secondAttribute="leading" constant="35" id="a20-YL-DzY"/>
                                 <constraint firstAttribute="trailing" secondItem="6Ub-W7-mUI" secondAttribute="trailing" id="dQF-dW-msC"/>
                                 <constraint firstItem="6Ub-W7-mUI" firstAttribute="centerX" secondItem="utt-4l-toQ" secondAttribute="centerX" id="hrr-3r-2J3"/>
                             </constraints>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="DOw-VY-uDv"/>
+                                </mask>
+                            </variation>
                         </view>
                     </subviews>
                     <constraints>
